--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
 
-        android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light">
+        android:supportsRtl="true" >
 
         <activity
             android:name="it.unife.dsg.ramp_android.RampManagerActivity"
