--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
                 <action android:name="it.unife.dsg.ramp_android.RampLocalService" />
             </intent-filter>
         </service>
-        <receiver android:name=".WifiOppReceiver">
+        <receiver android:name=".helper.WifiOppReceiver">
             <intent-filter>
                 <action android:name="it.unife.dsg.ramp_android.action.WIFIOPP"/>
             </intent-filter>
