--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,9 +38,9 @@
                 <action android:name="it.unife.dsg.ramp_android.RampLocalService" />
             </intent-filter>
         </service>
-        <receiver android:name=".helper.WifiOppReceiver">
+        <receiver android:name=".helper.LCCReceiver">
             <intent-filter>
-                <action android:name="it.unife.dsg.ramp_android.action.WIFIOPP"/>
+                <action android:name="it.unife.dsg.ramp_android.action.LCC"/>
             </intent-filter>
         </receiver>
 
