--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         </activity>
 
         <service
-            android:name="it.unife.dsg.ramp_android.RampLocalService"
+            android:name="it.unife.dsg.ramp_android.helper.RampLocalService"
             android:label="RAMP Local Service" >
             <intent-filter>
                 <action android:name="it.unife.dsg.ramp_android.RampLocalService" />
